ingress-basics/apps-eg.yaml

---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: apps
  namespace: default
spec:
  gatewayClassName: codesalot-envoy-gateway
  listeners:
    - name: https
      protocol: HTTP
      port: 443
      hostname: colinjcodesalot.com
